# LIeC

./: .gitignore  README.md  pdfs03-test.html
.github/configs/: auto_assign_configs.yml  convert-to-html-configs.html  mathjax_config.html
.github/workflows/: convert-to-html.yml  convert-to-pdf.yml
Cpm/: README.md
Cpm/doc/tex/: main.tex
Cpm/flex/: CMakeLists.txt  Makefile  cpm-lexer  cpm-lexer.c  cpm-lexer.flex  cpm-lexer.ll
Cpm/flex/test/: constants.cpm  prova.cpm
artifacts/html/: 00-interpreti-compilatori.html  01-Struttura-compilatore.html  02-analisi-lessicale.html  03-analisi-sintattica.html  03-test.html  04-analisi-semantica.html  05-rappresentazione-intermedia.html  05.1-LLVM-IR.html  06-middle-end.html
code/01-flex/: lexer-cpp.ll
code/02-bison/calc-1/: README  calc.hh  calc.ll  calc.yy
code/02-bison/calc-2/: Makefile  README  calc.ll  calc.yy
code/02-bison/calc-2-prec/: README  calc.ll  calc.yy
code/02-bison/calc-3/: README  calc.ll  calc.yy
code/02-bison/calc-3-rpn/: README  calc.hh  calc.ll  calc.yy
code/02-bison/wait/: Makefile  lexer.ll  parser.yy
docs/: 00-interpreti-compilatori.md  03-test.md
pdfs/: 00-interpreti-compilatori.html  01-Struttura-compilatore.html  02-analisi-lessicale.html  03-test.html
teoria/: 00-interpreti-compilatori.md  01-Struttura-compilatore.md  02-analisi-lessicale.md  03-analisi-sintattica.md  03-test.md  04-analisi-semantica.md  05-rappresentazione-intermedia.md  05.1-LLVM-IR.md  06-middle-end.md
